k8s-local-kubespray/mainfest/movie-web-backend/api-gateway/api-gateway-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: api-gateway-gateway
  namespace: movie-web
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "movie-web-backend.nhatanhdevops.com"
