k8s-local-kubespray/mainfest/movie-web-backend/api-gateway/api-gateway-destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-gateway-rule
  namespace: movie-web
spec:
  host: k8s-api-gateway
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
